--- a/61_Revisões.ipynb
+++ b/61_Revisões.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZarOf236k1GWz+ctfe9Ke",
+      "authorship_tag": "ABX9TyO9w01JLvEL53Zk91HiWSLX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -648,6 +648,394 @@
       ],
       "metadata": {
         "id": "GFrgHFx53lo7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Live do dia 06/09/2021**\n",
+        "\n",
+        "00:04:13\tDiogo Bueno:\tsim\n",
+        "\n",
+        "00:04:21\tClaudio Almeida:\tSim\n",
+        "\n",
+        "00:04:23\tValmir Junior:\tShow\n",
+        "\n",
+        "00:04:25\tMaria Alice:\tOuvindo alto e claro\n",
+        "\n",
+        "00:04:26\tLeonardo Cotta:\tsim\n",
+        "\n",
+        "00:04:26\tMurilo Alan Koprovski:\tAlto e claro ....\n",
+        "\n",
+        "00:04:41\tValmir Junior:\tProssiga, na escuta\n",
+        "\n",
+        "00:05:14\tValmir Junior:\tA imagem estápéquena\n",
+        "\n",
+        "00:05:35\tValmir Junior:\tshow, como está sua filha?\n",
+        "\n",
+        "00:05:49\tMurilo Alan Koprovski:\tEu não sou referência, estou aqui comendo pó do povo que está lá na frente.\n",
+        "\n",
+        "00:06:00\tMaria Alice:\tEtaaa...\n",
+        "\n",
+        "00:06:28\tIvson:\tReação de vacina?\n",
+        "\n",
+        "00:06:28\tValmir Junior:\tBrotuejas\n",
+        "\n",
+        "00:12:36\tThales Ferraz:\tentrei agora, pq to em aula hahha. Mas aquele aula de matplotlib abriu minha cabeça\n",
+        "\n",
+        "00:12:38\tThales Ferraz:\tmuito bom\n",
+        "\n",
+        "00:17:22\tValmir Junior:\tUltralearning - Scott Young\n",
+        "\n",
+        "00:20:43\tMaria Alice:\tkkk\n",
+        "\n",
+        "Eu preciso dizer que tudo tem me ajudado muito nos estudos de maneira geral. Só não estou fazendo os cursos linearmente\n",
+        "\n",
+        "00:21:33\tJunior:\tEu sou da turma do DSNP 2.0, mas estou acompanhando as atualizações do DSNP 3.0,  existe algum problema?\n",
+        "\n",
+        "00:22:14\tIvson:\tMesmo conhecendo um pouco de Python, o Crash Course me ajudou a fixar os fundamentos.\n",
+        "\n",
+        "00:23:13\tValmir Junior:\tEu estou no meu tempo. Hoje terminei o modulo de gráficos e vou começar já já o projeto do covid. As vezes fico pensando que estou atrasado mais tiro logo isso da cabeça e continuo no meu tempo!\n",
+        "\n",
+        "00:23:20\tMaria Alice:\t☺️\n",
+        "\n",
+        "00:24:00\tANTONIO AGIZ:\tpode me contratra de ajudante...\n",
+        "\n",
+        "00:24:32\tANTONIO AGIZ:\tkkk\n",
+        "\n",
+        "00:25:47\tMaria Alice:\tAinda bem que vc fez sobrevivência na selva\n",
+        "\n",
+        "00:26:21\tMaria Alice:\tkkkkk\n",
+        "\n",
+        "00:26:42\tLeonardo Cotta:\tkkkkkk\n",
+        "\n",
+        "00:26:46\tANTONIO AGIZ:\tNa verdade é melhor fazer de pouco em pouco e ter uma certa consistência do que estudar 12 horas  e nunca mais  ver o material (assunto)\n",
+        "\n",
+        "00:27:02\tMaria Alice:\tÉ carne branca\n",
+        "\n",
+        "00:27:33\tMaria Alice:\tAnotando aqui! rsrsrs\n",
+        "\n",
+        "00:28:50\tANTONIO AGIZ:\tkkkk\n",
+        "\n",
+        "00:29:21\tMaria Alice:\tNo caso de onça, ficar de costas pra uma árvore\n",
+        "\n",
+        "00:29:23\tANTONIO AGIZ:\ttipo aquele programa \"largados e pelados...\"\n",
+        "\n",
+        "00:30:15\tANTONIO AGIZ:\tsobrevivendo na pratica\n",
+        "\n",
+        "00:30:19\tMaria Alice:\tkkk\n",
+        "\n",
+        "00:32:02\tANTONIO AGIZ:\t🙏🙏🙏\n",
+        "\n",
+        "00:32:27\tDiogo Bueno:\tForça aí. Não faltarão orações!\n",
+        "\n",
+        "00:35:29\tValmir Junior:\tEstá tudo TOP, é realmente o que esperava e procurava. A interação e a qualidade do conteudo\n",
+        "\n",
+        "00:35:34\tMaria Alice:\tCuida aí 🙌\n",
+        "\n",
+        "00:35:55\tValmir Junior:\tDeus presente sempre!\n",
+        "\n",
+        "00:35:57\tAlexandre Ferreira:\t👍🙏\n",
+        "\n",
+        "00:36:15\tThales Ferraz:\tcoisa boaaa\n",
+        "\n",
+        "00:36:43\tMaria Alice:\tAté mais!\n",
+        "\n",
+        "00:36:44\tIvson:\tValeu!\n",
+        "\n",
+        "00:36:45\tMaria Alice:\tBoa noite\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JZvfwUti3xrT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Live do dia 13/09/2021**\n",
+        "\n",
+        "Chat da aula:\n",
+        "\n",
+        "00:07:47\tThiago Rosa:\tvou baixar o pirata, uma coisa tenho certeza é bom demais kkkkk\n",
+        "\n",
+        "00:07:50\tDiogo Bueno:\tpirata não vem o Rafael galera\n",
+        "\n",
+        "00:08:49\tRafael Duarte:\tKkkkkkkkkkkk verdade Diogo!\n",
+        "\n",
+        "00:09:18\tRafael Duarte:\tKkkkkkkkkkkkkkkkk\n",
+        "\n",
+        "00:11:11\tRafael Duarte:\tIsso!!!!\n",
+        "\n",
+        "00:11:27\tRafael Duarte:\tVai ser legal!!\n",
+        "\n",
+        "00:12:07\tDiogo Bueno:\tVai chamar o Henrique Bastos pra aula de Django? Por favor!\n",
+        "\n",
+        "00:13:08\tThiago Rosa:\tgalera é sangue nos olhos, eu to atrasadaço hahaha\n",
+        "\n",
+        "00:14:41\tJoviano Silveira:\tboa noite\n",
+        "\n",
+        "00:14:46\tJoviano Silveira:\tBlumenau SC\n",
+        "\n",
+        "00:14:49\tJoviano Silveira:\tcheguei atrasado\n",
+        "\n",
+        "00:14:53\tIvson:\tRio/RJ\n",
+        "\n",
+        "00:14:53\tJoviano Silveira:\tkkkkkkkkkkkkkkk\n",
+        "\n",
+        "00:14:57\tJoviano Silveira:\tfarei o melhor pra vcs\n",
+        "\n",
+        "00:14:57\tCláudio Santos:\tRJ\n",
+        "\n",
+        "00:15:08\tClaudio Almeida:\tBoa noite! Rio de Janeiro.\n",
+        "\n",
+        "00:15:12\tJoviano Silveira:\tvem um esquema para nossa familia\n",
+        "\n",
+        "00:15:21\tJoviano Silveira:\tSQL e PBIX\n",
+        "\n",
+        "00:16:58\tJoviano Silveira:\tEu vi o movimento,\n",
+        "\n",
+        "fiquei puto por vc mano\n",
+        "\n",
+        "00:17:01\tJoviano Silveira:\tque foda\n",
+        "\n",
+        "00:17:15\tJoviano Silveira:\tmkt de graça\n",
+        "\n",
+        "00:17:16\tThiago Rosa:\tCarlos como que vaza as aulas, são alunos que fazem isso?\n",
+        "\n",
+        "00:17:45\tThiago Rosa:\tdoidera né\n",
+        "\n",
+        "00:17:49\tJoviano Silveira:\tgalera,\n",
+        "\n",
+        "quem vaza, pode ter certeza que vao ter a hora deles\n",
+        "\n",
+        "00:18:14\tDiogo Bueno:\tNas gravações do cursio vc fala assim: qualquer coisa procurem o suporte,... vai quebrar geral kkk\n",
+        "\n",
+        "00:18:21\tThiago Rosa:\té que pra mim não faz sentido aluno vazar, paga pelo produto pra distirbuir de graça\n",
+        "\n",
+        "00:18:37\tThiago Rosa:\tdistribuir*\n",
+        "\n",
+        "00:21:18\tThiago Rosa:\trealmente\n",
+        "\n",
+        "00:22:21\tJoviano Silveira:\t#CarlosPlanilheiro\n",
+        "\n",
+        "00:23:26\tThiago Rosa:\tkkkk\n",
+        "\n",
+        "00:23:49\tJoviano Silveira:\tvdd\n",
+        "\n",
+        "00:23:55\tJoviano Silveira:\tGood Times\n",
+        "\n",
+        "00:23:58\tIvson:\tkkkkkk\n",
+        "\n",
+        "00:24:02\tThiago Rosa:\tusava fds pra gastar só 1 pulso kkkk\n",
+        "\n",
+        "00:26:01\tGilberto Santos Soares:\tessa merda manda propaganda até hoje\n",
+        "\n",
+        "00:28:27\tRafael Duarte:\tTá quase!!! Kkkkkk\n",
+        "\n",
+        "00:28:29\tIvson:\tTempo mesmo!\n",
+        "\n",
+        "00:28:31\tRafael Duarte:\t😂😂😂😂\n",
+        "\n",
+        "00:28:31\tThiago Rosa:\tpartiu Brasília toda familia Sigmoidal\n",
+        "\n",
+        "00:28:38\tRafael Duarte:\tQuem me dera!!!! Kkkkkkkkkkkkkkkkkk\n",
+        "\n",
+        "00:28:43\tThiago Rosa:\tou não vai ser mais em Brasilia?kkkkk\n",
+        "\n",
+        "00:28:57\tThiago Rosa:\tkkkkkk\n",
+        "\n",
+        "00:28:59\tRafael Duarte:\tSabrage!!!!\n",
+        "\n",
+        "00:29:02\tRafael Duarte:\tManeiro demais 😂😂😂\n",
+        "\n",
+        "00:29:28\tThiago Rosa:\tquando amanhã?\n",
+        "\n",
+        "00:31:23\tDiogo Bueno:\teu voltei pro presencial e tô também no remoto, tá meio foda de encontrar tempo pra estudar e praticar, mas já estou conseguindo me organizar aos poucos\n",
+        "\n",
+        "00:34:18\tVinicius Boscoa:\tCarlos dominando o mercado original E o pirata ao mesmo tempo!\n",
+        "\n",
+        "00:35:21\tVinicius Boscoa:\tVai ter algum conteúdo sobre monitoramento de ML no DSNP?\n",
+        "\n",
+        "00:36:43\tEric Costa:\tSentimento de impotência com criança doente é foda demais\n",
+        "\n",
+        "00:41:47\tRafael Duarte:\tUm rapaz que deu sugestão também kkkk\n",
+        "\n",
+        "00:41:47\tThiago Rosa:\tprometeu 5 anos se não me engano kkkk\n",
+        "\n",
+        "00:41:50\tRafael Duarte:\tSempre tem gente ganhando\n",
+        "\n",
+        "00:42:07\tDiogo Bueno:\tAté a capa do pirata é pirata kkkk\n",
+        "\n",
+        "00:42:28\tIvson:\tPython do Zero não tá liberado pra mim...\n",
+        "\n",
+        "00:43:31\tThiago Rosa:\tFalando em Isabela, quede-lhe?\n",
+        "\n",
+        "00:43:57\tThiago Rosa:\te quem ta com voces no lugar dela?\n",
+        "\n",
+        "00:44:15\tThiago Rosa:\tshow de bola\n",
+        "\n",
+        "00:47:11\tThiago Rosa:\tO que voce recomenda pra estudar marketing, Carlos? Novo Mercado?\n",
+        "\n",
+        "01:00:52\tEric Costa:\tAbraço!\n",
+        "\n",
+        "01:00:54\tIvson:\tValeu!\n",
+        "\n",
+        "01:00:54\tEric Costa:\tobrigado!\n",
+        "\n",
+        "01:00:59\tIvson:\tObrigado!\n",
+        "\n",
+        "01:01:04\tClaudio Almeida:\tValeu!\n",
+        "\n",
+        "01:01:13\tCarlos Cugler:\tObrigado Valeu!\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5gvXqwOj33zF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Live do dia 27/09/2021**\n",
+        "\n",
+        "Chat da aula:\n",
+        "\n",
+        "00:11:35\tBruno Souza:\tkkk\n",
+        "\n",
+        "00:12:25\tFrancisco:\tmas aí como fica os projetos? A galera nova não terá as lives de cada etapa?\n",
+        "\n",
+        "00:13:38\tMarcos Pereira dos Santos:\t2020\n",
+        "\n",
+        "00:13:43\tFrancisco:\teu acabei de entrar...\n",
+        "\n",
+        "00:16:57\tIvson:\tBoa noite\n",
+        "\n",
+        "00:17:26\tFrancisco:\tDSNP hoje... só tinha um adicional por mais de 1 ano\n",
+        "\n",
+        "00:17:59\tBruno Souza:\tCarlos, uma dúvida! Eu entrei no DNSP no flash open no dia 09/08, mas não consegui acompanhar tudo nesse período até o dia de ontem. Assisti só o 1º módulo 😕\n",
+        "\n",
+        "\n",
+        "\n",
+        "Eu estava esperando passar a prova do concurso do Banco do Brasil e a prova foi ontem. Estava me preparando faz um tempo pra prova e me atrasei. Voltei com tudo hoje, será que consigo recuperar?\n",
+        "\n",
+        "00:18:14\tIvson:\tAinda não.\n",
+        "\n",
+        "00:21:57\tDiogo Bueno:\tnão\n",
+        "\n",
+        "00:21:58\tIvson:\tSim\n",
+        "\n",
+        "00:22:01\tRodrigo Goncalves:\tDepende\n",
+        "\n",
+        "00:22:06\tValmir Junior:\tnão deveria ser\n",
+        "\n",
+        "00:22:15\tBruno Souza:\tConcordo\n",
+        "\n",
+        "00:22:43\tDiogo Bueno:\tO importante é não parar quando ter o diploma.\n",
+        "\n",
+        "00:22:50\tValmir Junior:\tFormação sem conhecimento não vale muito\n",
+        "\n",
+        "00:24:10\tValmir Junior:\tJoguei somente atari\n",
+        "\n",
+        "00:24:19\tBruno Souza:\tEu parei nesse módulo, Carlos! Não segui em frente, pois eu tenho em mente que aplicar é mais importante que volume de horas assistidas de aula sem prática.\n",
+        "\n",
+        "00:24:21\tIvson:\tEntre alguém que nunca sentou a bunda na cadeira pra fazer um TCC e outro que fez, por mais inexperiente que seja, adquire habilidades diferenciadas.\n",
+        "\n",
+        "00:24:29\tMarcos Mori:\tDiablo 2 foi relançado heim!\n",
+        "\n",
+        "kkk\n",
+        "\n",
+        "00:35:51\tBruno Souza:\tkkk\n",
+        "\n",
+        "00:35:58\tBruno Souza:\tCura quântica\n",
+        "\n",
+        "00:36:12\tBruno Souza:\tNão aguenta 10 min de equações da física quântica\n",
+        "\n",
+        "00:47:18\tBruno Souza:\tfazenda kk\n",
+        "\n",
+        "00:48:53\tBruno Souza:\tkkkkkkkk\n",
+        "\n",
+        "00:55:54\tBruno Souza:\tnão\n",
+        "\n",
+        "00:55:57\tBruno Souza:\tficou bem claro\n",
+        "\n",
+        "00:56:09\tBruno Souza:\tVou imprimir esta semana na gráfica\n",
+        "\n",
+        "01:00:02\tFrancisco:\tessa mentoria q vc falou sexta e sábado é a parte?\n",
+        "\n",
+        "01:00:31\tAndre:\tGostaria também de saber sobre a mentoria\n",
+        "\n",
+        "01:02:04\tFrancisco:\tmas é contínuo? dá pra fazer entrando agora tb? vai rolar mais vezes?\n",
+        "\n",
+        "01:02:08\tBruno Souza:\tStartup enxuta kk\n",
+        "\n",
+        "01:03:22\tFrancisco:\tshow\n",
+        "\n",
+        "01:03:33\tBruno Souza:\tmuito bom!\n",
+        "\n",
+        "01:05:41\tRodrigo Goncalves:\tcomm certeza\n",
+        "\n",
+        "01:05:52\tPaulo Cesar:\t👍\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "fYlXFpmN3_8N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Live do dia 04/10/2021**\n",
+        "\n",
+        "Chat da aula:\n",
+        "\n",
+        "00:06:03\tluisf:\tBoa noite.\n",
+        "\n",
+        "00:07:32\tJordan Wesley:\tBoa noite\n",
+        "\n",
+        "00:07:34\tJordan Wesley:\tEu\n",
+        "\n",
+        "00:07:36\tRodrigo Goncalves:\tEu\n",
+        "\n",
+        "00:09:36\tRodrigo Goncalves:\tEu encerrei o modulo zero agr. Estou ha uns 4 dias só para preencher o canvas kk. Eu gostei muito da metodologia.\n",
+        "\n",
+        "00:10:55\tJordan Wesley:\tEstou iniciando o módulo 1, vim do PDZ onde acabei gostando bastante da didática do Sigmoidal\n",
+        "\n",
+        "00:11:16\tJordan Wesley:\tDemorei um pouco para começar o DSNP, mas agora que tive a oportunidade não deu para perder kk\n",
+        "\n",
+        "00:15:37\tJordan Wesley:\tO linkedin já tenho, essa semana quero tirar para fazer o portfolio.\n",
+        "\n",
+        "00:22:58\tFrancisco:\to áudio tá meio estourado, pelo menos pra mim\n",
+        "\n",
+        "00:23:24\tFrancisco:\tpode ser qualidade da conexão aqui\n",
+        "\n",
+        "00:23:25\tJoao Moura:\tta distorcendo um pouco\n",
+        "\n",
+        "00:33:11\tJoao Moura:\totimizar\n",
+        "\n",
+        "00:43:11\tJoao Moura:\tkkkkkk\n",
+        "\n",
+        "00:50:18\tJoao Moura:\ttop\n",
+        "\n",
+        "00:50:38\tRodrigo Goncalves:\tta muito bom\n",
+        "\n",
+        "00:51:21\tJoao Moura:\tkkk valeu carlos\n",
+        "\n",
+        "00:51:26\tRodrigo Goncalves:\tpow foi rapido pra caraca\n",
+        "\n",
+        "00:51:27\tluisf:\tObrigado\n",
+        "\n",
+        "00:51:28\tRodrigo Goncalves:\tkkk\n",
+        "\n",
+        "00:51:30\tRodrigo Goncalves:\tmuito bom\n",
+        "\n",
+        "00:51:56\tluisf:\tabraço\n",
+        "\n",
+        "00:51:58\tRodrigo Goncalves:\tvlwww\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3zAgl_rU4OvT"
       }
     },
     {
