--- a/62_Visualizações_de_Dados_com_Python.ipynb
+++ b/62_Visualizações_de_Dados_com_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMpqG6W/bW4PAEQqxG9Vyd",
+      "authorship_tag": "ABX9TyP0lzDnRJTOLhGDsctuSSsg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +51,21 @@
       ],
       "metadata": {
         "id": "6Kdg9cXDME2C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Como consumir esse curso**\n",
+        "\n",
+        "Aqui no Sigmoidal temos uma filosofia bem definida que toma por princípio 3 Ps: Prática, Portfólio e Personal Branding.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Nessa aula, estamos enfatizando o primeiro P, da Prática, e como fazê-la de forma efetiva com o material desse curso."
+      ],
+      "metadata": {
+        "id": "dKTeJrZ6Nehn"
       }
     },
     {
