--- a/62_Visualizações_de_Dados_com_Python.ipynb
+++ b/62_Visualizações_de_Dados_com_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0lzDnRJTOLhGDsctuSSsg",
+      "authorship_tag": "ABX9TyM6eYwIx2T7LrfweH9j+uvV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,6 +66,42 @@
       ],
       "metadata": {
         "id": "dKTeJrZ6Nehn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **\"O Visual Vende\"**\n",
+        "\n",
+        "O belo é feito para ser admirado. Existe uma aura ao redor do que é belo que nos faz sentir mais conectados, nos chama mais atenção e fica gravado em nossa memória. Por isso, não se engane, belas visualizações não são perda de tempo ou firula. É um investimento de tempo que paga dividendos so\u0010bre o seu trabalho, pois o visual vende!\n",
+        "\n",
+        "\n",
+        "\n",
+        "Não só vende produtos, mas vende ideias e transmite conhecimentos. Tenha isso em mente ao criar suas visualizações."
+      ],
+      "metadata": {
+        "id": "PZ8vWbhUNrmn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Método Sigmoidal e Personal Branding**\n",
+        "\n",
+        "Aqui voltamos aos princípios do Sigmoidal: Prática, Portfólio e Personal Branding.\n",
+        "\n",
+        "\n",
+        "Aproveite que está estudando e produzindo material e transforme esse material em artigos, tutoriais, posts em suas redes sociais. Não só o LinkedIn mas Instagram, Facebook, Tik Tok, qualquer rede que você utilize!\n",
+        "\n",
+        "\n",
+        "Faça com que sua rede de contatos saiba com clareza que você não só é bom em visualizações, mas torne-se a referência deles no assunto!\n",
+        "\n",
+        "\n",
+        "\n",
+        "Quem não é visto não é lembrado!"
+      ],
+      "metadata": {
+        "id": "-JJeyOl0N67Z"
       }
     },
     {
