--- a/62_Visualizações_de_Dados_com_Python.ipynb
+++ b/62_Visualizações_de_Dados_com_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6eYwIx2T7LrfweH9j+uvV",
+      "authorship_tag": "ABX9TyPUjdhJsYNsw1TEYAFk5gdC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,6 +102,29 @@
       ],
       "metadata": {
         "id": "-JJeyOl0N67Z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **05_colab.mp4**\n",
+        "\n",
+        "Ao longo do curso, iremos utilizar a plataforma Google Colab para fazer nossos projetos.\n",
+        "\n",
+        "\n",
+        "\n",
+        "O Google Colab é um ambiente Jupyter Notebook na nuvem, que traz muita robustez, versatilidade e alta reprodutibilidade aos nossos projetos, sem precisar de qualquer tipo de setup ou instalação. Basta acessar um link e começar a programar!\n",
+        "\n",
+        "\n",
+        "\n",
+        "Por esse motivo, ele já se tornou queridinho da comunidade, e é um grande aliado nosso, pois nos ajuda a ganhar tempo e focar no que realmente importa.\n",
+        "\n",
+        "# **Links úteis:**\n",
+        "\n",
+        "[Notebook usado nesta aula](https://colab.research.google.com/drive/1V7DDexJbJiv0q3nCO6iTDeDjm0p_XcS8)"
+      ],
+      "metadata": {
+        "id": "RD8rUJF3ON82"
       }
     },
     {
