--- a/62_Visualizações_de_Dados_com_Python.ipynb
+++ b/62_Visualizações_de_Dados_com_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUjdhJsYNsw1TEYAFk5gdC",
+      "authorship_tag": "ABX9TyMF61zCpgkIgwhvHBjjT72q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,6 +125,25 @@
       ],
       "metadata": {
         "id": "RD8rUJF3ON82"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Recomendação de Material Extra**\n",
+        "\n",
+        "Sempre que algum material for citado ao longo das aulas, seu link estará aqui embaixo! Isso serve para notebooks utilizados nas aulas, assim como qualquer outro recurso!\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "Livro \"Storytelling com Dados\"\n",
+        "\n",
+        "Livro \"Como Mentir Com Estatística\"\n",
+        "\n",
+        "Dark Horse Analytics"
+      ],
+      "metadata": {
+        "id": "9An1NAYlOm1G"
       }
     },
     {
