--- a/62_Visualizações_de_Dados_com_Python.ipynb
+++ b/62_Visualizações_de_Dados_com_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMF61zCpgkIgwhvHBjjT72q",
+      "authorship_tag": "ABX9TyNopiV/ZQQ9HVIdM7hbeGWR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,26 +134,18 @@
         "\n",
         "Sempre que algum material for citado ao longo das aulas, seu link estará aqui embaixo! Isso serve para notebooks utilizados nas aulas, assim como qualquer outro recurso!\n",
         "\n",
-        "Links úteis:\n",
         "\n",
-        "Livro \"Storytelling com Dados\"\n",
+        "## **Links úteis:**\n",
         "\n",
-        "Livro \"Como Mentir Com Estatística\"\n",
+        "[Livro \"Storytelling com Dados\"](https://www.amazon.com.br/Storytelling-com-Dados-Visualiza%C3%A7%C3%A3o-Profissionais/dp/8550804681)\n",
         "\n",
-        "Dark Horse Analytics"
+        "[Livro \"Como Mentir Com Estatística\"](https://www.amazon.com.br/Como-Mentir-Estat%C3%ADstica-Darrell-Huff/dp/858057952X/ref=asc_df_858057952X/?tag=googleshopp00-20&linkCode=df0&hvadid=379712528301&hvpos=&hvnetw=g&hvrand=13370910310319748986&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001541&hvtargid=pla-786135653177&psc=1)\n",
+        "\n",
+        "[Dark Horse Analytics](https://www.darkhorseanalytics.com/)"
       ],
       "metadata": {
         "id": "9An1NAYlOm1G"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "g7hidSaFL-F4"
-      },
-      "outputs": [],
-      "source": []
     }
   ]
 }
