--- a/62_Visualizações_de_Dados_com_Python.ipynb
+++ b/62_Visualizações_de_Dados_com_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNopiV/ZQQ9HVIdM7hbeGWR",
+      "authorship_tag": "ABX9TyN6uGzr5qBB95urkvTze0Dg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,6 +145,21 @@
       ],
       "metadata": {
         "id": "9An1NAYlOm1G"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Princípios de Visualização de Dados**\n",
+        "\n",
+        "## **Data Storytelling**\n",
+        "\n",
+        "## **A Melhor Ferramenta Para Visualizações**\n",
+        "\n",
+        "## **Pense no Receptor**"
+      ],
+      "metadata": {
+        "id": "TE1bj_Y4PSqu"
       }
     }
   ]
