--- a/63_Sobre_o_Matplotlib.ipynb
+++ b/63_Sobre_o_Matplotlib.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsO/qUAeXA/0eJ48iaVlyF",
+      "authorship_tag": "ABX9TyN2ngvJJjZ6jpAoqlR8XA9F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -658,12 +658,13 @@
         "\n",
         "Antes de começarmos a trabalhar com visualização de dados em Python, precisamos conhecer melhor a principal biblioteca de visualizações que a linguagem oferece. Sem dúvidas, é a mais usada, e vai fazer parte da maioria dos projetos que você vai ler ou fazer.\n",
         "\n",
-        "Links úteis:\n",
+        "## **Links úteis:**\n",
         "\n",
-        "Notebook de apoio\n",
-        "Python Plotting with Matplotlib - Real Python\n",
-        "Mastering Matplotlib\n",
-        "Documentação Oficial do Matplotlib"
+        "[Python Plotting with Matplotlib - Real Python](https://realpython.com/python-matplotlib-guide/)\n",
+        "\n",
+        "[Mastering Matplotlib](https://www.oreilly.com/library/view/mastering-matplotlib/9781783987542/)\n",
+        "\n",
+        "[Documentação Oficial do Matplotlib](https://matplotlib.org/2.0.2/examples/showcase/anatomy.html)"
       ],
       "metadata": {
         "id": "w9FLS8ybZOZP"
