--- a/64_Data_Viz_Gráfico_de_Linhas.ipynb
+++ b/64_Data_Viz_Gráfico_de_Linhas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnk8FEY6gJard7F8LVOMjG",
+      "authorship_tag": "ABX9TyP36R/+c2+VSKfNApH2RwqT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -624,7 +624,7 @@
         "\n",
         "## **Links úteis:**\n",
         "\n",
-        "Dicas para customizar Gráficos de Linhas - W3 Schools"
+        "[Dicas para customizar Gráficos de Linhas - W3 Schools](https://www.w3schools.com/python/matplotlib_line.asp)"
       ],
       "metadata": {
         "id": "jb9q68tCcMKN"
