--- a/65_Data_Viz_Histograma.ipynb
+++ b/65_Data_Viz_Histograma.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNB9UIQrCI0VEKydG1Tsz6T",
+      "authorship_tag": "ABX9TyPUt2wORzjABEE/TuISUvhu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -555,7 +555,7 @@
         "Links úteis:\n",
         "\n",
         "\n",
-        "Como criar e interpretar Histogramas - Khan Academy"
+        "[Como criar e interpretar Histogramas - Khan Academy](https://pt.khanacademy.org/math/ap-statistics/quantitative-data-ap/histograms-stem-leaf/v/histograms-intro)"
       ],
       "metadata": {
         "id": "1-w0wyMEzDt-"
