--- a/66_Data_Viz_Gráfico_de_Barras.ipynb
+++ b/66_Data_Viz_Gráfico_de_Barras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAOOp9NutOM9DI/HFd6tJi",
+      "authorship_tag": "ABX9TyPGqDFKBSPR+A7SZOk3RYN9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1275,13 +1275,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **04_barras**\n",
+        "## **Extra: 04_barras**\n",
         "\n",
         "Links úteis:\n",
         "\n",
-        "Barplot Gallery\n",
+        "[Barplot Gallery](https://python-graph-gallery.com/barplot/)\n",
         "\n",
-        "Fonte dos Dados - Portal da Transparência"
+        "[Fonte dos Dados - Portal da Transparência](https://transparencia.metrosp.com.br/)"
       ],
       "metadata": {
         "id": "ryhwPIFbNRNS"
