--- a/67_Data_Viz_Gráfico_de_Pizza.ipynb
+++ b/67_Data_Viz_Gráfico_de_Pizza.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKJngWWsbwQa9jyPD7DrDv",
+      "authorship_tag": "ABX9TyPQJdZ/014FzzgW2w6jyRhJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,6 +61,17 @@
       ],
       "metadata": {
         "id": "CuaKNg3uw4Q-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Plotar o gráfico de pizza\n",
+        "\n",
+        "Os dados que usaremos neste *notebook* são os dados públicos do CENIPA - Ocorrências Aeronáuticas na Aviação Civil Brasileira. O *dataset* contendo estas estatísticas podem ser encontrados no [Portal Brasileiro de Dados Abertos](http://dados.gov.br/dataset/ocorrencias-aeronauticas-da-aviacao-civil-brasileira). O *dataset* usado aqui, em formato `csv`, pode ser baixado [neste link](https://raw.githubusercontent.com/carlosfab/curso_data_science_na_pratica/master/modulo_02/ocorrencias_aviacao.csv)."
+      ],
+      "metadata": {
+        "id": "Z00dQcTCxPY1"
       }
     },
     {
