--- a/69_Data_Viz_Boxplot.ipynb
+++ b/69_Data_Viz_Boxplot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3WNf+y+AOtKPR2At5iz2C",
+      "authorship_tag": "ABX9TyM9EYE85SLxUuBy+QU2ptQF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -540,7 +540,7 @@
         "\n",
         "[Boxplot com Seaborn](https://seaborn.pydata.org/generated/seaborn.boxplot.html)\n",
         "\n",
-        "Boxplot com Pandas"
+        "[Boxplot com Pandas](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.boxplot.html)"
       ],
       "metadata": {
         "id": "GWtbSD-MGugo"
