--- a/70_Data_Viz_Grafico_Violino.ipynb
+++ b/70_Data_Viz_Grafico_Violino.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9Mme10DITYsmfXZetI4WT",
+      "authorship_tag": "ABX9TyPKwy+RyZxchiTa6P+OabGO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -481,12 +481,12 @@
         "plt.tight_layout()"
       ],
       "metadata": {
-        "id": "lq1stl1renPi",
-        "outputId": "b7cf9df8-e4da-4a4b-e662-c48a333127a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "id": "lq1stl1renPi",
+        "outputId": "b7cf9df8-e4da-4a4b-e662-c48a333127a8"
       },
       "execution_count": 3,
       "outputs": [
@@ -501,6 +501,21 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **08_violino**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[Boxplot vs. Violin plot](https://datavizpyr.com/violinplot-vs-boxplot-when-violinplot-can-be-more-useful/)\n",
+        "\n",
+        "[5 Reasons you should use a violin graph - BioTuring](https://blog.bioturing.com/2018/05/16/5-reasons-you-should-use-a-violin-graph/)"
+      ],
+      "metadata": {
+        "id": "Dg8Ndzblex8G"
+      }
     }
   ]
 }
