--- a/71_Data_Viz_Gráfico_de_Waffle.ipynb
+++ b/71_Data_Viz_Gráfico_de_Waffle.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6hbAveA7VYVgUlsDQRk49",
+      "authorship_tag": "ABX9TyO5RSNRQdvDULrUioVsEOuu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -243,12 +243,12 @@
         "plt.show();"
       ],
       "metadata": {
-        "id": "OMBHZXWAru6D",
-        "outputId": "dca095eb-fd47-4075-9368-051d58281f22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "id": "OMBHZXWAru6D",
+        "outputId": "dca095eb-fd47-4075-9368-051d58281f22"
       },
       "execution_count": 4,
       "outputs": [
@@ -263,6 +263,22 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: 09_waffle**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "\n",
+        "Fonte dos Dados - CENIPA\n",
+        "Documentação PyWaffle\n",
+        "Font Awesome"
+      ],
+      "metadata": {
+        "id": "9bzLmLkNr5Wk"
+      }
     }
   ]
 }
