--- a/71_Data_Viz_Gráfico_de_Waffle.ipynb
+++ b/71_Data_Viz_Gráfico_de_Waffle.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5RSNRQdvDULrUioVsEOuu",
+      "authorship_tag": "ABX9TyOkJKqc5Cjx+hkGTJU7tBol",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,9 +272,11 @@
         "Links úteis:\n",
         "\n",
         "\n",
-        "Fonte dos Dados - CENIPA\n",
-        "Documentação PyWaffle\n",
-        "Font Awesome"
+        "[Fonte dos Dados - CENIPA](https://www2.fab.mil.br/cenipa/index.php/estatisticas)\n",
+        "\n",
+        "[Documentação PyWaffle](https://github.com/gyli/PyWaffle)\n",
+        "\n",
+        "[Font Awesome](https://fontawesome.com/)"
       ],
       "metadata": {
         "id": "9bzLmLkNr5Wk"
