--- a/72_Data_Viz_Wordcloud.ipynb
+++ b/72_Data_Viz_Wordcloud.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbUo2IBMKPH9szm1xbtdon",
+      "authorship_tag": "ABX9TyOHsPBBICebzZJgmkDYHm4E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,12 +74,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "x4Z692XvwCAp"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# instalar wordcloud\n",
+        "!pip install wordcloud -q"
+      ]
     }
   ]
 }
