--- a/72_Data_Viz_Wordcloud.ipynb
+++ b/72_Data_Viz_Wordcloud.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPda+Zxzff+trRiTRoPmCRS",
+      "authorship_tag": "ABX9TyNO+EhI+kgLZ6LkwsAJ+vqA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -782,6 +782,21 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Nuvem de Palavras **\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[Como criar uma wordclouds - Sigmoidal.ai](https://sigmoidal.ai/como-criar-uma-wordcloud-em-python/)\n",
+        "\n",
+        "[Fonte dos Dados - Iniside Airbnb](https://insideairbnb.com/get-the-data/)"
+      ],
+      "metadata": {
+        "id": "1FRaadVizyJf"
+      }
     }
   ]
 }
